# rust_hon_scanner

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/usbhid/: Cargo.toml
crates/usbhid/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: main.rs
