[package]
name = "gui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }

hidapi = "2.6.3"
usbhid = { version = "0.1.0", path = "../crates/usbhid" }
